# spoti-alarm-client

./: .gitignore  .gitmodules  CMakeLists.txt  Podfile
android/: settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/janek/: MainActivity.kt
raspi-alarm/: AppDelegate.swift  Colors.swift  Info.plist  Networker.swift  ViewController.swift  main.swift
raspi-alarm.xcodeproj/: project.pbxproj
raspi-alarm.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
raspi-alarm.xcodeproj/xcuserdata/janek.xcuserdatad/xcschemes/: xcschememanagement.plist
raspi-alarm.xcworkspace/: contents.xcworkspacedata
raspi-alarm.xcworkspace/xcuserdata/janek.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
raspi-alarm/Base.lproj/: Main.storyboard
raspi-alarmTests/: raspi_alarmTests.swift
raspi-alarmUITests/: raspi_alarmUITests.swift
